# mb-explore

./: .gitignore  CMakeLists.txt
include/: musicbrainz_client.h  musicbrainz_types.h  url_utils.h
src/: main.cpp  musicbrainz_client.cpp  url_utils.cpp
tests/: url_utils_test.cpp
